words and alignment fixes

--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -102,6 +102,7 @@
   font-size: 1.05rem;
   line-height: 1.8;
   margin-bottom: 2.2rem;
+  text-align: justify;
 }
 
 .hero-actions {
